# spec-kit-orchestration

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MIGRATION.md  Makefile  README.md  REQUESTS.md  bootstrap.sh  claude.md  config-template.yml  extension.yml  orca  pyproject.toml  speckit-orca  speckit-orchestrate
.github/workflows/: ci.yml  codeql.yml
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
commands/: adopt.md  assign.md  brainstorm.md  code-review.md  cross-review.md  crossreview.md  matriarch.md  pr-review.md  review-code.md  review-pr.md  review.md  self-review.md  spec-lite.md  tui.md  yolo.md
docs/: orca-harvest-matrix.md  orca-roadmap.md  readme-style-guide.md  release-process.md  spex-harvest-list.md  worktree-protocol.md
docs/archive/: orca-harvest-matrix.md  orca-roadmap-pre-toolchest.md
docs/research/: micro-spec-audit-2026-04-11.md  spec-kitty-execution-loop.md
plugins/claude-code/: README.md
plugins/codex/: AGENTS.md
scripts/: release.sh
scripts/bash/: crossreview-backend.py  crossreview.sh  orca-coderabbit-pre-pr.sh  orca-doctor.sh  orca-matriarch.sh  orca-worktree-lib.sh  orca-worktree.sh  resolve-pr-threads.sh  sync-skills.sh
specs/001-orca-worktree-runtime/: plan.md  review.md  self-review.md  spec.md  tasks.md
specs/002-brainstorm-memory/: data-model.md  plan.md  quickstart.md  research.md  review.md  self-review.md  spec.md  tasks.md
specs/003-cross-review-agent-selection/: data-model.md  plan.md  quickstart.md  research.md  review.md  self-review.md  spec.md
specs/004-orca-workflow-system-upgrade/: data-model.md  plan.md  quickstart.md  research.md  review-cross.md  review.md  self-review.md  spec.md  tasks.md
specs/005-orca-flow-state/: brainstorm.md  data-model.md  quickstart.md  research.md  review.md  self-review.md  spec.md
specs/006-orca-review-artifacts/: spec.md
specs/007-orca-context-handoffs/: plan.md  research.md  review.md  self-review.md  spec.md  tasks.md
specs/008-orca-capability-packs/: data-model.md  plan.md  quickstart.md  research.md  review.md  self-review.md  spec.md  tasks.md
specs/009-orca-yolo/: brainstorm.md  data-model.md  plan.md  review-pr.md  review.md  spec.md  tasks.md
templates/: brainstorm-record-template.md  capability-packs.example.json  crossreview.schema.json  review-template.md  worktree-record.example.json  worktree-registry.example.json
tests/: test_adoption.py  test_banner_anim.py  test_brainstorm_memory.py  test_capability_packs.py  test_context_handoffs.py  test_evolve.py  test_flow_state.py  test_flow_state_adoption.py  test_flow_state_parity.py  test_flow_state_reviews.py  test_flow_state_spec_lite.py  test_flow_state_yolo.py  test_matriarch.py  test_onboard.py  test_openspec_adapter.py  test_sdd_adapter.py  test_sdd_adapter_public_api.py  test_sdd_adapter_registry.py  test_sdd_adapter_worktree_lanes.py  test_session.py  test_spec_lite.py  test_tui.py  test_tui_actions.py  test_tui_adoption.py  test_tui_better.py  test_tui_cards.py  test_tui_color.py  test_tui_event_drilldown.py  test_tui_event_feed.py  test_tui_host_agnostic.py  test_tui_kanban.py  test_tui_modals.py  test_tui_polish.py  test_tui_screens.py  test_tui_v11.py  test_tui_v2_bugs.py  test_yolo.py  test_yolo_supervised.py
(+449 files in other folders)
