[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "spec-kit-orca"
version = "1.4.1"
description = "Installer and updater for Spec Kit Orca orchestration extensions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "SteeZyT33" }
]
dependencies = []

[project.scripts]
speckit-orca = "speckit_orca.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/speckit_orca"]

[tool.hatch.build.targets.sdist.force-include]
"src/speckit_orca/assets/speckit-orca.sh" = "src/speckit_orca/assets/speckit-orca.sh"
"src/speckit_orca/assets/speckit-orca-main.sh" = "src/speckit_orca/assets/speckit-orca-main.sh"
"speckit-orca" = "speckit-orca"
"templates/capability-packs.example.json" = "templates/capability-packs.example.json"

[tool.hatch.build.targets.wheel.force-include]
"src/speckit_orca/assets/speckit-orca.sh" = "speckit_orca/assets/speckit-orca.sh"
"src/speckit_orca/assets/speckit-orca-main.sh" = "speckit_orca/assets/speckit-orca-main.sh"
"templates/capability-packs.example.json" = "speckit_orca/templates/capability-packs.example.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
