[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "orca"
version = "2.1.0"
description = "Cross-agent review and SDD-aware quality gates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "SteeZyT33" }
]
dependencies = [
  "textual>=0.50",
  "watchdog>=3.0",
]

[project.scripts]
orca = "orca.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orca"]

[tool.hatch.build.targets.sdist.force-include]
"src/orca/assets/orca.sh" = "src/orca/assets/orca.sh"
"src/orca/assets/orca-main.sh" = "src/orca/assets/orca-main.sh"
"orca" = "orca"

[tool.hatch.build.targets.wheel.force-include]
"src/orca/assets/orca.sh" = "orca/assets/orca.sh"
"src/orca/assets/orca-main.sh" = "orca/assets/orca-main.sh"

[tool.pytest.ini_options]
pythonpath = ["src"]
