[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "orca"
version = "2.1.0"
description = "Cross-agent review and SDD-aware quality gates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "SteeZyT33" }
]
dependencies = [
  "textual>=0.50",
  "watchdog>=3.0",
  "anthropic>=0.40.0",
  "jsonschema>=4.0",
  "tomli>=2.0; python_version<'3.11'",
  "tomli-w>=1.0",
]

[project.scripts]
orca = "orca.cli:main"
orca-cli = "orca.python_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orca"]

[tool.hatch.build.targets.sdist.force-include]
"src/orca/assets/orca.sh" = "src/orca/assets/orca.sh"
"src/orca/assets/orca-main.sh" = "src/orca/assets/orca-main.sh"
"orca" = "orca"

[tool.hatch.build.targets.wheel.force-include]
"src/orca/assets/orca.sh" = "orca/assets/orca.sh"
"src/orca/assets/orca-main.sh" = "orca/assets/orca-main.sh"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: end-to-end self-host tests (Spec 015 dogfood)",
]

[dependency-groups]
# uv prunes test-only deps from the lockfile when not declared here;
# this group keeps pytest available for `uv sync --all-groups`.
dev = [
    "pytest>=9.0.3",
]
